[tool.poetry]
name = "web-hw13-fastapimail"
version = "0.1.0"
description = ""
authors = ["Dmytro Oseledko <d.oseledko@outlook.com>"]
readme = "README.md"
packages = [{include = "web_hw13_fastapimail"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi-mail = "^1.2.8"
fastapi = {extras = ["all"], version = "^0.95.2"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
jinja2 = "^3.1.2"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^4.5.5"
python-dotenv = "^1.0.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
